Filters action button visibility fix

--- a/app/components.common/data-grid/data-grid-filters.styl
+++ b/app/components.common/data-grid/data-grid-filters.styl
@@ -2,6 +2,9 @@
   padding 0 0 .2em
   margin 0
 
+.find
+  margin .3em 0
+
 :host
   padding-bottom 1em
 
